--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +8,7 @@
   <title>Item Lister</title>
 </head>
 <body>
-  <script src="app.js"></script>
+  <script src="app.js"> </script>
   <header id="main-header" class="bg-success text-white p-4 mb-3">
     <div class="container">
       <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
@@ -25,8 +24,8 @@
     <h2 class="title">Items</h2>
     <ul id="items" class="list-group">
       <li class="list-group-item">Item 1</li>
-      <li class="list-group-item">Item 2</li>
-      <li class="list-group-item">Item 3</li>
+      <li class="list-group-item" style="background-color: green;">Item 2</li>
+      <li class="list-group-item"></li>
       <li class="list-group-item">Item 4</li>
     </ul>
    </div>
@@ -34,4 +33,3 @@
 
 </body>
 </html>
- 
